--- a/dream-journal/package.json
+++ b/dream-journal/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^24.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
