--- a/whereaboutgo/package.json
+++ b/whereaboutgo/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
